Added goku image and added >br> element
Agla parhaao

--- a/cartroon.html
+++ b/cartroon.html
@@ -9,5 +9,7 @@
     <h1><i>Hey Im a big Heading</i></h1>
     <p> Yoo! I am a beautiful <b>paragraph</b></p>
     <a href="https://google.com" target="_blank" title="Let's goo">Hey Bro! I am link click me😍</a>
+    <p>My name is <br><b>Gokuu!</b></p>
+    <img src="img/goku.jpeg" alt="Eror 4O5" width="1000" height="600">
 </body>
 </html>
