learn basic CSS and create new HTML and CSS file
learn css  and learn about changing text size font , fonst family , font color and  learn  new attribute of css and and create class

--- a/style.html
+++ b/style.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style </title>
-    
+    <title>Style</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body bgcolor="white">
-   <span>Span Element</span>
-    <h1 class="big"><i>Yoo Broo</i></h1>
-    <h1><i>Yoo Broo</i></h1>
-    <h1><i>Yoo Broo</i></h1>
-<h2 class="big">i am heading2</h2>
-<h2>i am heading2</h2>
-<h2>i am heading2</h2>
+<body>
+   <h1 class="big uppercase">Heading 1-1</h1>
+    <h1 class="big"> <span> Headinng </span>1-2</h1>
+   <h1 class="big uppercase">Headinng 1-3</h1>
+   <h2 class="big uppercase ">Heading 2-1</h2>
+   <h2 class="uppercase"><span>Heading</span> 2-2</h2>
+   <h2 class="big">Heading 2-3</h2>
 </body>
 </html>
