change img name

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <!--Header Element-->
     <header>
-        <img src="/img/goku avatar.png" alt="Goku">
+        <img src="/img/one.png" alt="Goku">
         <h1><center>Son Goku</center></h1>
     </header>
     <!-- Main Element -->
      <main id="main">
 <h2>About Goku</h2>
 <p><center>  Saiyan <span class="change">Goku</span>, originally known as Kakarot, is the main hero in the Japanese manga and anime series "Dragon Ball," created by Akira Toriyama. <br> Originally published as a manga in the magazine Weekly Shonen Jump from 1984, it spawned a series of anime, movies, and other forms of media thereafter.</center></p>
-<figure><img src="/img/goku-friend2.jpg" alt="friend">
+<figure><img src="/img/two.jpg" alt="friend">
 <figcaption>Goku and his Friends:</figcaption> </figure>
 
 <h2>Characteristics</h2>
