--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <title>Goku</title>
     <link rel="icon" type="image/x-icon" href="/img/tab.jpg">
-    
+    <link rel="stylesheet" href="/css/goku.css">
 </head>
 <body>
     <!--Header Element-->
