insert img link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--Header Element-->
     <header>
-        <img src="/img/one.png" alt="Goku">
+        <img src="https://avatarfiles.alphacoders.com/375/375590.png" alt="Goku">
         <h1><center>Son Goku</center></h1>
     </header>
     <!-- Main Element -->
