--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <main id="main">
 <h2>About Goku</h2>
 <p><center>  Saiyan <span class="change">Goku</span>, originally known as Kakarot, is the main hero in the Japanese manga and anime series "Dragon Ball," created by Akira Toriyama. <br> Originally published as a manga in the magazine Weekly Shonen Jump from 1984, it spawned a series of anime, movies, and other forms of media thereafter.</center></p>
-<figure><img src="/img/two.jpg" alt="friend">
+<figure><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZwIaMaCxLRTK2gRFXDJdBNz4Us2oyaoLaHA&s" alt="friend">
 <figcaption>Goku and his Friends:</figcaption> </figure>
 
 <h2>Characteristics</h2>
