--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Goku</title>
-    <link rel="icon" type="image/x-icon" href="/img/tab.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Playwrite+BE+VLG:wght@100..400&display=swap" rel="stylesheet">
+
+<link rel="icon" type="image/x-icon" href="/img/tab.jpg">
     <link rel="stylesheet" href="/css/goku.css">
 </head>
 <body>
@@ -17,9 +22,9 @@
     <!-- Main Element -->
      <main id="main">
 <h2>About Goku</h2>
-<p><center>  Saiyan <span class="change">Goku</span>, originally known as Kakarot, is the main hero in the Japanese manga and anime series "Dragon Ball," created by Akira Toriyama. <br> Originally published as a manga in the magazine Weekly Shonen Jump from 1984, it spawned a series of anime, movies, and other forms of media thereafter.</center></p>
+<p>  Saiyan <span class="change">Goku</span>, originally known as Kakarot, is the main hero in the Japanese manga and anime series "Dragon Ball," created by Akira Toriyama.Originally published as a manga in the magazine Weekly Shonen Jump from 1984, it spawned a series of anime, movies, and other forms of media thereafter.</p>
 <figure><img src="/img/two.jpg" alt="friend">
-<figcaption>Goku and his Friends:</figcaption> </figure>
+<figcaption class="caption">Goku and his Friend</figcaption> </figure>
 
 <h2>Characteristics</h2>
 <!-- Characteristic  -->
@@ -31,7 +36,7 @@
 </ol>
 <!-- Friends -->
 <h2>Friends:</h2>
-<caption>"Goku's friends are very good and they are loyal andas well as strong Bulma and Krilling are Goku's best friend and Vegeta is Goku's Fighting Buddy. C;lick onlink to know more about them."</caption>
+<p> "Goku's friends are very good and they are loyal andas well as strong Bulma and Krilling are Goku's best friend and Vegeta is Goku's Fighting Buddy. Click onlink to know more about them."</p>
 <ul>
     <li><a href="https://dragonball.fandom.com/wiki/Krillin" target="_blank">Krillin</a></li>
     <li><a href="https://dragonball.fandom.com/wiki/Bulma?so=search"target="_blank" >Bulma</a></li>
@@ -39,10 +44,10 @@
     <li><a href="https://dragonball.fandom.com/wiki/Zeno" target="_blank" >Grand-Zeno</a></li>
 </ul>
 <!-- Footer -->
+</main>
      <footer>
         <p>This site was created <a href="https://www.taptapkaboom.com/" target="_blank">Tap Tap kaboo</a> Class &copy; Maiz Ali</p>
      </footer>
 
-</main>
 </body>
 </html>
