--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
      <main id="main">
 <h2>About Goku</h2>
 <p>  Saiyan <span class="change">Goku</span>, originally known as Kakarot, is the main hero in the Japanese manga and anime series "Dragon Ball," created by Akira Toriyama.Originally published as a manga in the magazine Weekly Shonen Jump from 1984, it spawned a series of anime, movies, and other forms of media thereafter.</p>
-<figure><img src="/img/two.jpg" alt="friend">
-<figcaption class="caption">Goku and his Friend</figcaption> </figure>
+<img src="/img/two.jpg" alt="friend">
+<figure></figure><figcaption class="caption">Goku and his Friend</figcaption> </figure>
 
 <h2>Characteristics</h2>
 <!-- Characteristic  -->
